# koaclient

./: Cargo.toml  README.md  bevy_game-836d930b1756e63b.js  bevy_game-84078a1357d35802.js  bevy_game-ba0ad817e2e49530.js  build.rs  index.html
.github/workflows/: ci.yml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/: character.assets.ron
assets/characters/: skeleton.character.yaml
assets/models/: fmj.gltf
assets/shaders/: custom_vertex_attribute.wgsl  line.wgsl
mobile/: Cargo.toml
mobile/src/: lib.rs
src/: action.rs  lib.rs  loading.rs  main.rs
src/plugins/: game.rs  inspect.rs  load.rs  mod.rs
src/tools/: mod.rs  scene_viewer_plugin.rs
