[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy_kira_audio = { version = "0.16" }
bevy_asset_loader = { version = "0.17", features = ["standard_dynamic_assets"] }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

bevy-inspector-egui = "0.19.0"
serde = "1.0"
serde_yaml = "0.9"
bevy_common_assets = { version = "0.7.0", features = ["ron", "yaml"] }
bevy_rapier2d = { version = "*", features = ["simd-stable", "debug-render-2d"] }

[build-dependencies]
embed-resource = "1.4"
