[package]
name = "mia"
version = "0.1.0"
edition = "2021"

#[features]
#default = ["bevy_pbr"]
#highlight_changes = []

[dependencies]
bevy-inspector-egui= "0.19.0"
bevy-inspector-egui-derive = "0.19.0"

bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_gizmos",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2",
] }

egui = "0.22"
bevy_egui = "0.21"
bevy_sprite3d = "2.6.0"
bevy_asset_loader = { version = "0.17", features = ["standard_dynamic_assets"] }

image = { version = "0.24", default-features = false }
once_cell = "1.16"
pretty-type-name = "1.0"
smallvec = "1.10"

egui_dock = "0.6"
egui-gizmo = "0.11"
rand = "0.8.5"
bevy_shader_utils = "0.5.2"

# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
# bevy_framepace = "0.11"